# quack

./: .gitignore  CMakeLists.txt  README.md  quack.sln  quack.vcxproj
quack/: buffer.cpp  buffer.h  hash.cpp  hash.h  http.h  main.cpp  platform.cpp  platform.h  server.cpp  server.h  types.h  utility.h  win32_event_processor_iocp.cpp  win32_event_processor_iocp.h
